Fix SVG overflow and ensure container height is 100vh

--- a/css/style.css
+++ b/css/style.css
@@ -10,26 +10,26 @@ body {
 
 /* Form styling */
 input:invalid {
-    background-color: #FFEBEE;
+    background-color: #ffebee;
 }
 
 input:valid {
-    background-color: #E8F5E9;
+    background-color: #e8f5e9;
 }
 
 input:placeholder-shown {
-    background-color: #E3F2FD;
+    background-color: #e3f2fd;
 }
 
 ::placeholder {
-    color: #BDBDBD;
+    color: #bdbdbd;
     font-weight: lighter;
 }
 
 input {
     padding: 1rem;
     font-size: 1.5rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
     outline: none;
     border: none;
 }
@@ -42,12 +42,13 @@ input {
     font-weight: bold;
     text-transform: capitalize;
     color: #ffffff;
-    font-family: 'Roboto', Arial, sans-serif;
+    font-family: "Roboto", Arial, sans-serif;
 }
+
 .form-control {
     font-size: 1.5rem;
     font-weight: normal;
-    color: #332D2D;
+    color: #332d2d;
 }
 
 /* Spacing */
@@ -59,20 +60,26 @@ input {
 .container-fluid {
     max-width: 100vw;
 }
+
 .waves-container {
     position: relative;
     z-index: 1;
+    overflow: hidden;
+    height: 100vh;
 }
+
 .waves-container > svg {
     position: absolute;
     z-index: -1;
-    fill: #304FFE;
+    fill: #304ffe;
 }
+
 .container {
     width: min(1320px, 100%);
     margin-left: auto;
     margin-right: auto;
 }
+
 .btn-group {
     display: flex;
     flex-flow: row wrap;
@@ -82,12 +89,15 @@ input {
 }
 
 /* Sections */
-.header, .main {
+.header,
+.main {
     max-width: 100vw;
 }
+
 .header {
     padding: 2rem 0;
 }
+
 .game {
     display: flex;
     flex-flow: column wrap;
@@ -105,6 +115,7 @@ input {
     margin: 1rem 0;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
 .player-info {
     display: none;
     flex-flow: row-reverse wrap;
@@ -124,41 +135,44 @@ input {
 
 .cell {
     font-size: 4rem;
-    background-color: #FBFBFB;
-    border-color: #304FFE;
+    background-color: #fbfbfb;
+    border-color: #304ffe;
     cursor: pointer;
 }
+
 .cell:hover,
 .cell:active {
-    background-color: #E3F2FD;
+    background-color: #e3f2fd;
 }
 
 .cell.hovered,
 .cell.pressed {
-    background-color: #EDE7F6;
+    background-color: #ede7f6;
 }
 
 .mark-x,
 .mark-x:hover,
 .mark-x:active {
-    background-color: #E3F2FD;
-    color: #2979FF;
+    background-color: #e3f2fd;
+    color: #2979ff;
     cursor: default;
 }
+
 .mark-0,
 .mark-0:hover,
 .mark-0:active {
-    background-color: #EDE7F6;
-    color: #651FFF;
+    background-color: #ede7f6;
+    color: #651fff;
     cursor: default;
 }
 
 .empty {
     cursor: default;
 }
-.cell.empty:hover, 
+
+.cell.empty:hover,
 .cell.empty:active {
-    background-color: #FBFBFB;
+    background-color: #fbfbfb;
 }
 
 .btn {
@@ -173,39 +187,44 @@ input {
 
 .btn-reset {
     background-color: #ffffff;
-    border: 2px solid #332D2D;
-    color: #332D2D;
+    border: 2px solid #332d2d;
+    color: #332d2d;
     font-size: 1rem;
     text-transform: uppercase;
     border-radius: 0.3rem;
     transition: background-color 0.3s, color 0.3s, box-shadow 0.3s;
 }
+
 .btn-reset:hover,
 .btn-reset:active {
-    background-color: #332D2D;
+    background-color: #332d2d;
     color: #ffffff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
 .btn-primary {
     margin: auto;
-    background-color: #3B71CA;
+    background-color: #3b71ca;
     color: #ffffff;
     font-size: 1rem;
     text-transform: uppercase;
     border-radius: 0.3rem;
     transition: box-shadow 0.3s;
 }
+
 .btn-primary:hover,
 .btn-primary:active {
     box-shadow: 0 4px 8px rgba(0, 123, 255, 0.3);
 }
 
-.btn-reset, .btn-primary {
+.btn-reset,
+.btn-primary {
     display: flex;
     flex-flow: row-reverse wrap;
     justify-content: center;
     align-items: center;
 }
+
 .form-set-name {
     margin: 3rem 0;
     display: flex;
@@ -232,12 +251,13 @@ input {
 
 .form-control {
     max-width: 100%;
-    background-color: #E3F2FD;
+    background-color: #e3f2fd;
     transition: background-color 0.3s ease-in-out;
 }
+
 .form-control:focus {
     background-color: white;
-    color: #304FFE;
+    color: #304ffe;
 }
 
 /* Animation */
@@ -271,60 +291,74 @@ input {
     .page-title {
         font-size: 3.5rem;
     }
+
     .player-info {
         width: 20.5rem;
         padding: 0.75rem;
         font-size: 1.75rem;
     }
+
     .game-board {
         grid-template-rows: repeat(3, 6.5rem);
         grid-template-columns: repeat(3, 6.5rem);
     }
+
     .cell {
         font-size: 3.5rem;
     }
+
     .btn {
         padding: 0.6rem 1.2rem;
         margin: 0.75rem;
     }
 }
+
 /* HD Devices */
 @media only screen and (max-width: 1355px) {
     .page-title {
         font-size: 3rem;
     }
+
     .label-text {
         font-size: 1rem;
     }
+
     .form-control {
         font-size: 1.25rem;
     }
+
     .player-info {
         width: 18rem;
         font-size: 1.5rem;
         padding: 0.75rem;
     }
+
     .game-board {
         grid-template-rows: repeat(3, 6rem);
         grid-template-columns: repeat(3, 6rem);
     }
+
     .cell {
         font-size: 3rem;
     }
+
     .form-set-name {
         display: flex;
         flex-flow: column wrap;
         align-items: center;
     }
+
     .btn {
         padding: 0.5rem 1rem;
         margin: 0.5rem;
     }
+
     .waves-container > svg {
         display: none;
     }
+
     .container-fluid {
-        background-color: #304FFE;
+        background-color: #304ffe;
         min-height: 75vh;
     }
 }
